# bibliofabric

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  BIBLIOFABRIC_CHANGES.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.dev/: 0-guidelines.md  1-refactor_overview.md  2-refactor_details.md  3-todo.md
.github/workflows/: python-ci.yml
.roo/rules/: journal.md  plan.md  rules.md
auth/: index.html
client/: index.html
config/: index.html
contributing/: index.html
docs/: auth.md  client.md  config.md  contributing.md  exceptions.md  index.md  models.md  resources.md
examples/: README.md  simple_example.py
exceptions/: index.html
models/: index.html
resources/: index.html
search/: search_index.json
src/AIREloom/: README.md  README_COMPREHENSIVE_ANALYSIS.md  aireloom_comprehensive_analysis.py  mkdocs.yml  pyproject.toml  simple_example.py  verification_script.py
src/AIREloom/aireloom/: __init__.py  client.py  config.py  constants.py  endpoints.py  session.py  unwrapper.py
src/AIREloom/aireloom/models/: __init__.py  base.py  data_source.py  organization.py  project.py  research_product.py  scholix.py
src/AIREloom/aireloom/resources/: __init__.py  base_client.py  data_sources_client.py  organizations_client.py  projects_client.py  research_products_client.py  scholix_client.py
src/AIREloom/docs/: api_reference.md  authentication.md  changelog.md  configuration.md  contributing.md  getting_started.md  index.md  installation.md
src/AIREloom/docs/advanced/: caching.md  configuration.md  error_handling.md  hooks.md  rate_limiting.md
src/AIREloom/docs/usage/: data_sources.md  organizations.md  projects.md  research_products.md  scholix.md
src/AIREloom/tests/: conftest.py  test_actual_data.py  test_auth.py  test_client.py  test_config.py  test_session.py  test_unwrapper.py
src/AIREloom/tests/resources/: __init__.py  test_data_sources_client.py  test_organizations_client.py  test_projects_client.py  test_research_products_client.py  test_scholix_client.py
src/bibliofabric/: README.md  __init__.py  auth.py  client.py  config.py  exceptions.py  log_config.py  models.py  pyproject.toml  resources.py  safe_types.py  types.py  utils.py
src/bibliofabric/tests/: test_auth.py  test_client.py  test_log_config.py  test_models.py  test_resources.py
tests/: test_auth.py  test_client.py  test_client_coverage.py  test_iter_helpers.py  test_log_config.py  test_models.py  test_resources.py  test_resources_coverage.py  test_safe_types.py  test_utils.py
