[project]
name = "bibliofabric"
version = "1.0.0"
description = "Generic framework for building bibliometric and scholarly data API clients"
authors = [
    {name = "Samuel Mok", email = "s.mok@utwente.nl"}
]
# readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.0",
    "cachetools>=5.3.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/utsmok/bibliofabric"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",    # isort
    "B",    # bugbear
    "Q",    # quotes
    "PTH",  # pathlib
    "SIM",  # simplify
    "RET",  # return
    "PIE",  # misc
    "FBT",  # boolean traps
    "PERF", # performance
    "PL",   # pylint
    "UP",   # pyupgrade
    "FURB", # refurb
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
